--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -25,5 +25,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.google.code.gson:gson:2.2.+'
     compile files('libs/android-async-http-1.4.4.jar')
+    compile 'com.squareup.okhttp:okhttp:1.3.+'
+    compile 'com.squareup.retrofit:retrofit:1.5.0@jar'
 }
