--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'android-library'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion '19.1.0'
+    compileSdkVersion 21
+    buildToolsVersion '22.0.1'
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 19
+        minSdkVersion 15
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
@@ -19,8 +19,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.code.gson:gson:2.2.+'
-    compile files('libs/android-async-http-1.4.4.jar')
+    compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.loopj.android:android-async-http:1.4.6'
     compile 'com.squareup.okhttp:okhttp:1.3.+'
     compile 'com.squareup.retrofit:retrofit:1.5.0@jar'
 }
