--- a/trivialDrive/build.gradle
+++ b/trivialDrive/build.gradle
@@ -2,12 +2,16 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 16
-    buildToolsVersion "19.1.0"
+    buildToolsVersion "22.0.1"
 
     defaultConfig {
         applicationId "com.example.android.trivialdrivesample"
         minSdkVersion 8
         targetSdkVersion 15
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 }
 
